Added necessary tests for client, repository, refresher, models and core